[PHOTOS] fix truncate #11

--- a/src/app/features/common/photo/photo.component.scss
+++ b/src/app/features/common/photo/photo.component.scss
@@ -6,6 +6,6 @@
   }
 
   &__title {
-    @apply text-sm w-10/12 truncate text-gray-700;
+    @apply text-sm text-gray-700;
   }
 }
